# github-org-stats

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  github_org_stats.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test-and-publish.yml
config/: example_config.json
docs/: DEVELOPMENT.md  MIGRATION.md  USAGE.md
examples/: basic_usage.sh  github_app_setup.md
tests/: __init__.py  test_github_org_stats.py  test_language_sanitization.py  test_real_world_language_sanitization.py  test_results.md
